# Lima-camera-ueye

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindUeye.cmake
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: index.rst  tango.rst
include/: UeyeCamera.h  UeyeDetInfoCtrlObj.h  UeyeInterface.h  UeyeSyncCtrlObj.h  UeyeVideoCtrlObj.h
python/: __init__.py
sdk/: LINUX382_README.TXT  Linux_ReadMe_4.61_EN.TXT
sip/: UeyeCamera.sip  UeyeInterface.sip
src/: Makefile  UeyeCamera.cpp  UeyeDetInfoCtrlObj.cpp  UeyeInterface.cpp  UeyeSyncCtrlObj.cpp  UeyeVideoCtrlObj.cpp
tango/: CMakeLists.txt  Ueye.py
